--- a/Frontend/src/app/property/property-card/property-card.component.html
+++ b/Frontend/src/app/property/property-card/property-card.component.html
@@ -1,13 +1,9 @@
 
-<div class="row">
-  <div class="shadow-lg col-sm-4 p-3">
   <div class="card">
 <img class="propImg" src="assets/images/house.jpg">
 <div class="card-body p-2">
-<h3>{{Property.Name}}</h3>
-<h3 >{{Property.Type}}</h3>
-<h3>{{Property.Price}}</h3>
-</div>
-</div>
+<h3>{{propertynames.Name}}</h3>
+<h3 >{{propertynames.Type}}</h3>
+<h3>{{propertynames.Price}}</h3>
 </div>
 </div>
