--- a/Frontend/src/app/property/property-list/property-list.component.html
+++ b/Frontend/src/app/property/property-list/property-list.component.html
@@ -1,1 +1,7 @@
-<p>property-list works!</p>
+
+
+<div class="row">
+  <div *ngFor='let prop of Properties ' class="shadow-lg col-sm-4 p-3">
+<app-property-card  [propertynames]= "prop" ></app-property-card>
+</div>
+</div>
