--- a/Frontend/src/app/property/property-card/property-card.component.css
+++ b/Frontend/src/app/property/property-card/property-card.component.css
@@ -5,3 +5,37 @@
 .propImg{
   height: 250px;
 }
+
+.card:hover img{
+  transform: scale(1.2,1.2);
+  transition-duration: 500ms;
+  transition-timing-function: ease-out;
+
+}
+
+.card img{
+  transform: scale(1,1);
+  transition-duration: 500ms;
+  transition-timing-function: ease-out;
+}
+.card-img-wrapper{
+  overflow: hidden;
+  position: relative;
+}
+
+ .member-icons{
+  position: absolute;
+  bottom: -30%;
+  right: 0;
+  left: 0;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.card-img-wrapper:hover .member-icons{
+  bottom: 0;
+}
+
+.animate{
+  transition: all 0.3s ease-in-out;
+}
