--- a/Frontend/src/app/property/property-card/property-card.component.html
+++ b/Frontend/src/app/property/property-card/property-card.component.html
@@ -1,6 +1,20 @@
 
   <div class="card">
-<img class="propImg" src="assets/images/house.jpg">
+    <div class="card-img-wrapper">
+<img class="card-img-top" src="assets/images/house.jpg">
+<ul class="list-inline text-center member-icons animate">
+  <li class="list-inline-item">
+    <button class="btn btn-primary">
+      <i class="far fa-edit"></i> <!--font awesome icon used-->
+    </button>
+  </li>
+    <li class="list-inline-item">
+<button class="btn btn-primary">
+  <i class="far fa-address-card"></i><!--font awesome icon used-->
+    </button>
+  </li>
+</ul>
+</div>
 <div class="card-body p-2">
 <h3>{{propertynames.Name}}</h3>
 <h3 >{{propertynames.Type}}</h3>
