--- a/Frontend/src/app/property/property-card/property-card.component.html
+++ b/Frontend/src/app/property/property-card/property-card.component.html
@@ -4,7 +4,7 @@
 <img class="card-img-top" src="assets/images/house.jpg">
 <ul class="list-inline text-center member-icons animate">
   <li class="list-inline-item">
-    <button class="btn btn-primary">
+    <button class="btn btn-primary" routerLink="/property-detail/{{propertynames.Id}}">
       <i class="far fa-edit"></i> <!--font awesome icon used-->
     </button>
   </li>
