--- a/Frontend/src/app/property/property-card/property-card.component.html
+++ b/Frontend/src/app/property/property-card/property-card.component.html
@@ -1,7 +1,7 @@
 
   <div class="card">
     <div class="card-img-wrapper">
-<img class="card-img-top" src="assets/images/house.jpg">
+<img class="card-img-top" src="assets/images/{{propertynames.Image}}.jpg">
 <ul class="list-inline text-center member-icons animate">
   <li class="list-inline-item">
     <button class="btn btn-primary" routerLink="/property-detail/{{propertynames.Id}}">
