--- a/Frontend/src/app/property/property-detail/property-detail.component.html
+++ b/Frontend/src/app/property/property-detail/property-detail.component.html
@@ -1,3 +1,19 @@
 <p>property-detail works!</p>
 
-<p>Selected Property id is {{propertyId}}</p>
+
+<p>Selected Property id is {{propertyId}}
+
+
+  <br/> <br/>
+
+<button (click)="onSelectNext()" class="btn btn-primary">Select next page</button>
+<br/> <br/>
+<button routerLink="/property-detail/1" class="btn btn-primary">1</button>
+
+<button routerLink="/property-detail/2" class="btn btn-primary">2</button>
+
+<button routerLink="/property-detail/3" class="btn btn-primary">3</button>
+
+</p>
+
+
