--- a/Frontend/src/app/property/add-property/add-property.component.html
+++ b/Frontend/src/app/property/add-property/add-property.component.html
@@ -1,2 +1,45 @@
-<p>add-property works!</p>
-<button (click)="onBack()" class="btn btn-primary">Back</button>
+<div class="card">
+  <div class="card-header">
+     Add new Property
+
+  </div>
+  <div class="card-body">
+   <form (ngSubmit)='onSubmit(Form)' #Form="ngForm">
+      <div class="form-group col-12">
+           <label for="name">Name</label>
+           <input type="text" class="form-control" #propName="ngModel" ngModel name="Name" required minlength="5">
+
+
+
+           <span *ngIf="!propName.valid && propName.touched" class="error-block">
+          <span *ngIf="propName.errors.required">  Please provide a name </span>
+          <span *ngIf="propName.errors.minlength">Name must be atleast 5 char long</span>
+            </span>
+
+      </div>
+
+      <div class="form-group col-12">
+        <label for="type">Type</label>
+        <input type="text" class="form-control" ngModel name = "Type">
+
+
+
+   </div>
+
+   <div class="form-group col-12">
+    <label for="price">Price</label>
+    <input type="text" class="form-control" ngModel name="Price">
+   </div>
+<div class="form-group col-12">
+  <button [disabled]="!Form.valid" type="submit" class="btn btn-primary mr-2"> Save  </button>
+  <button type="reset" class="btn btn-primary"> Cancel  </button>
+
+</div>
+
+
+
+   </form>
+
+
+  </div>
+</div>
